*broke up the IRODSCommands class into IRODSCommands and IRODSConnection
*removed unused edu.sdsc.grio.io.irods.Method class and removed previously deprecated references
*culled all TODO's and dead code, did mass format of source to bring it up to current standards.
*more refactoring to come.....

----------
Fix admin_build.xml ANT script to automatically compile with debug when running code coverage

----------
Replaced 'hand made' logging with standard logging, best practice for integrating with other frameworks, such as fedorairods
* to adjust logging, consult the log4j.properties file in src/api, defaults to ERROR, can be set to DEBUG, INFO, WARN, ERROR
* this change supercedes the prior 'debug' conventions in Jargon

----------
Tests and resolution of Bug 32 -  copyTo when dest file is from URI results in -78000 resource not found

---------
Add a close() method to IRODSFile that will close the underlying IRODSFileSystem.  This is useful for occasions where the IRODSFile is created by a URI, 
where the IRODSFileSystem was not created in the calling code.  This was causing -4000 errors when the socket closed without a disconnect being sent.
A better solution will probably appear in newer versions of Jargon

---------
Tests and fix for  Bug 57 -  parallel file get operation does not work in Jargon

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org